# sprint-manager-backend

./: .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt
apis/: ai.py  projects.py  search_bar.py  sprints.py  tasks.py  users.py
apis/schemas/: project.py  search_bar.py  task.py  user.py
models/: project.py  search_bar.py  task.py  user.py
sprint-manager-backend/: database.py  main.py  pyproject.toml
sprint-manager-backend/apis/: projects.py  users.py
sprint-manager-backend/apis/schemas/: sprint.py
sprint-manager-backend/models/: sprint.py  task.py  user.py
